# insurance-reserving-neural

./: README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: demo_individual_reserving.py  run_tests.py  run_tests_script.py
src/insurance_reserving_neural/: __init__.py  bootstrap.py  data.py  loss.py  metrics.py  models.py  synthetic.py
tests/: test_bootstrap.py  test_data.py  test_loss.py  test_metrics.py  test_models.py  test_synthetic.py
