[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-reserving-neural"
version = "0.1.0"
description = "Individual neural claims reserving — per-claim RBNS reserve estimates with bootstrap uncertainty"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" },
]
keywords = [
    "insurance",
    "reserving",
    "neural-network",
    "actuarial",
    "claims",
    "rbns",
    "individual-reserving",
    "solvency-ii",
    "chain-ladder",
    "bootstrap",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "polars>=0.20",
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "torch>=2.0",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-reserving-neural"
Repository = "https://github.com/burning-cost/insurance-reserving-neural"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_reserving_neural"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -p no:cacheprovider"
